--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -29,7 +29,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     min-width: 100vw;
-    // min-height: 100vh;
+    /* // min-height: 100vh; */
     margin: 0;
     font-family: 'Roboto', sans-serif;
     text-align: center;
