--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,6 +27,14 @@ const { title = "Oseelabs" } = Astro.props as Props;
 
     <!-- MONETAG ADS -->
     <meta name="monetag" content="3377156c33be7e4d8752d6a85bc9cc77" />
+    <script>
+      (function (d, z, s) {
+        s.src = "https://" + d + "/400/" + z;
+        try {
+          (document.body || document.documentElement).appendChild(s);
+        } catch (e) {}
+      })("vemtoutcheeg.com", 8555352, document.createElement("script"));
+    </script>
   </head>
 
   <body>
