Created a test button for Direct Ads

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,5 +46,9 @@ import HeroCTA from "../components/svelte/HeroCta.svelte";
     </div>
   </section>
 
-  <section class="about"></section>
+  <section class="about">
+    <!-- THIS ISA TEST SECTION, FOR ABOUT, SEE THE /ABOUT PAGE -->
+    <a href="https://zireemilsoude.net/4/8555380" target="_blank" rel="noopener noreferrer">
+      ADVERTISEMENT
+  </section>
 </MainLayout>
