Added about) section (More of a cards banner though in homepage

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -29,6 +29,8 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     min-width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
     /* // min-height: 100vh; */
     margin: 0;
     font-family: 'Roboto', sans-serif;
