--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,7 @@ const { title = "Oseelabs" } = Astro.props as Props;
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
     <!-- MONETAG ADS -->
-    <!-- <meta name="monetag" content="3377156c33be7e4d8752d6a85bc9cc77" />
+    <meta name="monetag" content="3377156c33be7e4d8752d6a85bc9cc77" />
     <script>
       (function (d, z, s) {
         s.src = "https://" + d + "/400/" + z;
@@ -35,7 +35,7 @@ const { title = "Oseelabs" } = Astro.props as Props;
           (document.body || document.documentElement).appendChild(s);
         } catch (e) {}
       })("vemtoutcheeg.com", 8555352, document.createElement("script"));
-    </script> -->
+    </script>
   </head>
 
   <body>
