Added hero background images

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -4,8 +4,8 @@
     --color-primary-dark: rgb(233, 93, 44);
     --color-primary-darker: rgb(166, 62, 24);
     --color-lightest: #B0CEE2;
-    --color-darker: #45586C;
-    --color-darkest: #1A2730;
+    --color-darker: #4e637a;
+    --color-darkest: #131d24;
     --color-white: #fff;
     --color-black: #000;
 
