--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,8 @@ section {
         border: 1px solid var(--color-dark);
         border-radius: 0.5em;
         text-align: center;
+        align-items: center;
+        align-content: center;
 
         .cta {
             display: flex;
@@ -74,12 +76,16 @@ section {
                 align-content: center;
                 justify-content: center;
             .hero__title {
-                color: var(--color-primary-lighter);
+                color: var(--color-darkest);
                 text-decoration-color: currentColor;
             }
 
             .hero__description {
-                color: var(--color-primary);
+                color: var(--color-primary-darker);
+            }
+
+            .info {
+                color: var(--color-darkest);
             }
 
             .hero__cta {
@@ -89,10 +95,52 @@ section {
         }
     }
 }
+section.hero {
+    display: flex;
+    flex-direction: row;
+    background-image: url(/images/landscape-hero-bg.png);
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+    width: 100%;
+    min-height: 85dvh;
+
+    .large-hero-image {
+        width: 100%;
+        height: auto;
+        background-image: url('/images/hero-earth.jpg');
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        transform: rotate(180deg) rotateX(180deg);
+        
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    @media (width < 768px) {
+        min-height: 60dvh;
+    }
+    @media (prefers-color-scheme: dark) {
+        background-image: url("/images/landscape-hero-bg-dark.png");
+    }
+}
 section.about {
+    display: grid;
+        grid-template-columns: 1fr;
+        gap: 1em;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        padding: 1em;
     .about__content {
-        width: auto;
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+        align-content: center;
+            justify-content: center;
+            align-items: center;
     }
 }
