Updated import conflicts in about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,10 @@
 ---
-import "../styles/about.scss";
+import "@styles/about.scss";
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 
-import team from "../lib/data/team";
-import quote from "../images/quote.svg";
+import team from "../lib/data/team.ts";
+import quote from "@images/quote.svg";
 ---
 
 <MainLayout title="The Team Behind Us | About Oseelabs">
