Updated name alias issues in tsconfig

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
 import "@styles/about.scss";
-import MainLayout from "../layouts/MainLayout.astro";
+import MainLayout from "@layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 
-import team from "../lib/data/team.ts";
+import team from "@data/team.ts";
 import quote from "@images/quote.svg";
 ---
 
