--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import "@styles/index.scss";
 
-import MainLayout from "../layouts/MainLayout.astro";
+import MainLayout from "@layouts/MainLayout.astro";
 import HeroCTA from "@components/svelte/HeroCta.svelte";
 import AboutCard from "@components/astro/AboutCard.astro";
 import worldMission from "@images/world-mission.jpg";
