--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -25,7 +25,19 @@ const { title = "Oseelabs" } = Astro.props as Props;
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=trending_flat"
     />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" is:inline></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+      is:inline></script>
+
+    <!-- GOOGLE ADS -->
+    <meta name="google-adsense-account" content="ca-pub-3831287965462482" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
+      crossorigin="anonymous"></script>
+    <!-- GOOGLE ADS -->
 
     <!-- MONETAG ADS -->
     <!-- <meta name="monetag" content="3377156c33be7e4d8752d6a85bc9cc77" />
