--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,6 +70,22 @@ import eye from "@images/eye.jpg";
     <h2 class="about__title">About Us</h2>
     <h3 class="visually-hidden">About Oseelabs</h3>
     <div class="about__content">
+
+      <!-- GOOGLE AD -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
+     crossorigin="anonymous"></script>
+      <!-- display-ad -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-3831287965462482"
+          data-ad-slot="9118431440"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <!-- GOOGLE AD -->
+       
       <AboutCard
         title="Our Mission"
         image={worldMission}
