Updated google ads

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -37,6 +37,14 @@ const { title = "Oseelabs" } = Astro.props as Props;
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
       crossorigin="anonymous"></script>
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
+      crossorigin="anonymous"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <!-- GOOGLE ADS -->
 
     <!-- MONETAG ADS -->
