--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -42,7 +42,7 @@ const { title = "Oseelabs" } = Astro.props as Props;
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
       crossorigin="anonymous"></script>
-    <script defer async>
+    <script defer async is:inline>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     <!-- GOOGLE ADS -->
