--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,6 +79,10 @@ import eye from "@images/eye.jpg";
           data-ad-slot="9118431440"
           data-ad-format="auto"
           data-full-width-responsive="true"></ins>
+          
+    <script async is:inline>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
       <!-- GOOGLE AD -->
 
       <AboutCard
