--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,23 +66,37 @@ import eye from "@images/eye.jpg";
     </div>
   </section>
 
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3831287965462482"
+    crossorigin="anonymous"></script>
+  <ins
+    class="adsbygoogle"
+    style="display:block"
+    data-ad-format="autorelaxed"
+    data-ad-client="ca-pub-3831287965462482"
+    data-ad-slot="8080580314"></ins>
+  <script is:inline>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <section class="about">
     <h2 class="about__title">About Us</h2>
     <h3 class="visually-hidden">About Oseelabs</h3>
     <div class="about__content">
-
       <!-- GOOGLE AD -->
       <!-- display-ad -->
-      <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-3831287965462482"
-          data-ad-slot="9118431440"
-          data-ad-format="auto"
-          data-full-width-responsive="true"></ins>
-          
-    <script async is:inline>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+      <ins
+        class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3831287965462482"
+        data-ad-slot="9118431440"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+
+      <script async is:inline>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
       <!-- GOOGLE AD -->
 
       <AboutCard
