Added mobile media query for users table

--- a/src/assets/styles/users.scss
+++ b/src/assets/styles/users.scss
@@ -70,4 +70,16 @@ table {
             color: var(--color-lightest);
         }
     }
+
+    @media (width < 600px) {
+        thead {
+            display: none;
+        }
+
+        tbody {
+            display: block;
+            width: 100%;
+            overflow-x: auto;
+        }
+    }
 }
