Updated cell widths

--- a/src/assets/styles/users.scss
+++ b/src/assets/styles/users.scss
@@ -39,6 +39,12 @@ table {
                 padding: 0.5em;
                 width: fit-content;
             }
+
+            &:first-child { width: 5%; }
+            &:nth-child(2) { width: 10%; }
+            &:nth-child(3) { width: 25%; }
+            &:nth-child(4) { width: 35%; }
+            &:nth-child(5) { width: 25%; }
         }
     }
 
@@ -58,12 +64,6 @@ table {
                 white-space: normal;
                 width: fit-content;
             }
-
-            :first-child { width: 5%; }
-            :nth-child(2) { width: 10%; }
-            :nth-child(3) { width: 25%; }
-            :nth-child(4) { width: auto; }
-            :nth-child(5) { width: 25%; }
         }
 
         tr:nth-child(even) {
@@ -78,6 +78,6 @@ table {
     }
 
     @media (width < 600px) {
-        font-size: 0.5em;
+        font-size: 0.6em;
     }
 }
