Updated users table

--- a/src/pages/admin/users.astro
+++ b/src/pages/admin/users.astro
@@ -26,13 +26,13 @@ const message = data.message;
 
 { message && <p>{message}</p> }
 
-<table>
+<table style="width: 100%;">
     <thead>
         <tr>
             <th align="left">#</th>
             <th align="left">Username</th>
             <th align="left">Full Name</th>
-            <th align="left">Bio</th>
+            <th align="left" style="width: 35% !important;">Bio</th>
             <th align="left">Email</th>
         </tr>
     </thead>
