--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -17,8 +17,12 @@ const title = "User Registration";
         <input type="text" id="username" name="username" required />
       </div>
       <div>
-        <label for="username">Fullname</label>
+        <label for="fullname">Fullname</label>
         <input type="text" id="fullname" name="fullname" required />
+      </div>
+      <div>
+        <label for="bio">Bio</label>
+        <input type="text" id="bio" name="bio" required />
       </div>
       <div>
         <label for="email">Email</label>
